--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <p>Example C# code for sending a message:</p>
             <div class="endpoint">
                 var client = new HttpClient();<br>
-                var response = await client.PostAsJsonAsync("https://yourwebsite.com/api/message", new {<br>
+                var response = await client.PostAsJsonAsync("https://mrjutt91.github.io/deepapidata//api/message", new {<br>
                 &nbsp;&nbsp;user = "C# App",<br>
                 &nbsp;&nbsp;text = "Hello from C#"<br>
                 });
@@ -420,4 +420,5 @@
         }
     </script>
 </body>
+
 </html>
